updates to home hero section

--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
 
     </header>
     <section class="home_hero">
+        <div class="home_hero_overlay"></div>
         <div class="home_hero_content container">
             <h3>lorem Ipsum</h3>
             <h1>Welcome to JCNP</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic cumque nam iusto laboriosam doloribus quibusdam dicta quae consequatur ad doloremque ab soluta sequi, consequuntur adipisci! Saepe ipsam dicta aliquam adipisci laborum fugiat ut magnam numquam itaque quam? Labore magnam possimus itaque eligendi tenetur quis veniam. Quasi ipsam in ea veniam.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic cumque nam iusto laboriosam doloribus quibusdam dicta quae consequatur ad doloremque ab soluta sequi, consequuntur adipisci! Saepe ipsam </p>
             <div class="home_hero_cta">
-               
-                <button class="secondary_button_outline"><a href="./about.html">Contact Us</a></button>
-                <button class="primary_button_outline"><a href="./about.html">Our Services</a></button>
+            
+                <button class="secondary_button"><a href="./about.html">Contact Us</a></button>
+                <button class="primary_button"><a href="./about.html">Our Services</a></button>
             </div>
         </div>
     </section>
