Home Page - About section

--- a/index.html
+++ b/index.html
@@ -24,5 +24,31 @@
             </div>
         </div>
     </section>
+    <section class="home_about">
+        <div class="home_about_container">
+         <div class="home_about_cards">
+           <div class="home_about_card card_1">
+            <h3 class="card_heading">100+</h3>
+            <p class="card_text">lorem 10</p>
+           </div>
+           <div class="home_about_card card_2">
+            <h3 class="card_heading">100+</h3>
+            <p class="card_text">lorem 10</p>
+           </div>
+           <div class="home_about_card card_3">
+            <h3 class="card_heading">100+</h3>
+            <p class="card_text">lorem 10</p>
+           </div>
+           <div class="home_about_card card_4">
+            <h3 class="card_heading">100+</h3>
+            <p class="card_text">lorem 10</p>
+           </div>
+           <div class="home_about_card card_5">
+            <h3 class="card_heading">100+</h3>
+            <p class="card_text">lorem 10</p>
+           </div>
+         </div>
+        </div>
+    </section>
 </body>
 </html>
