Home About Test

--- a/index.html
+++ b/index.html
@@ -25,30 +25,53 @@
         </div>
     </section>
     <section class="home_about">
-        <div class="home_about_container">
-         <div class="home_about_cards">
-           <div class="home_about_card card_1">
-            <h3 class="card_heading">100+</h3>
-            <p class="card_text">lorem 10</p>
-           </div>
-           <div class="home_about_card card_2">
-            <h3 class="card_heading">100+</h3>
-            <p class="card_text">lorem 10</p>
-           </div>
-           <div class="home_about_card card_3">
-            <h3 class="card_heading">100+</h3>
-            <p class="card_text">lorem 10</p>
-           </div>
-           <div class="home_about_card card_4">
-            <h3 class="card_heading">100+</h3>
-            <p class="card_text">lorem 10</p>
-           </div>
-           <div class="home_about_card card_5">
-            <h3 class="card_heading">100+</h3>
-            <p class="card_text">lorem 10</p>
-           </div>
-         </div>
-        </div>
+        <!-- <div class="home_about_cards">
+            <div class="home_about_card card_1">
+                <h3 class="card_heading">100+</h3>
+                <p class="card_text">lorem 10</p>
+            </div>
+            <div class="home_about_card card_2">
+                <h3 class="card_heading">100+</h3>
+                <p class="card_text">lorem 10</p>
+            </div>
+            <div class="home_about_card card_3">
+                <h3 class="card_heading">100+</h3>
+                <p class="card_text">lorem 10</p>
+            </div>
+            <div class="home_about_card card_4">
+                <h3 class="card_heading">100+</h3>
+                <p class="card_text">lorem 10</p>
+            </div>
+            <div class="home_about_card card_5">
+                <h3 class="card_heading">100+</h3>
+                <p class="card_text">lorem 10</p>
+            </div>
+        </div> -->
+        <ul class="home_about_cards">
+            <li class="home_about_card card_1">
+                <h3 class="card_heading">31+ years of undefeated success.</h3>
+                <p class="card_text">This is a paragrapgh</p>
+                <button class="primary_button_outline"><a href="">Learn More</a></button>  
+            </li>
+            <li class="home_about_card card_2">
+                <h3 class="card_heading">85+</h3>
+                <p class="card_text">Yeas of collective Executives experience </p>
+            </li>
+            <li class="home_about_card card_3">
+                <h3 class="card_heading">263+</h3>
+                <p class="card_text">Projects Completed</p>
+            </li>
+            <li class="home_about_card card_4">
+                <h3 class="card_heading">100%</h3>
+                <p class="card_text">Commitment to our clients</p>
+            </li>
+            <li class="home_about_card card_5">
+                <h3 class="card_heading">100+</h3>
+                <p class="card_text">This is a paragrapgh</p>
+            </li>
+        </ul>
+
+    
     </section>
 </body>
 </html>
