Home Marquee feature completed

--- a/index.html
+++ b/index.html
@@ -126,6 +126,35 @@
         </div>
         
     </section>
+
+
+    <section class="home_clients">
+        <div class="container">
+            <h4 class="home_clients_heading">Some of the cleints we have worked with</h4>
+        </div>
+        <div class="home_clients_marquee">
+            <div class="home_clients_marguee_track">
+                <div class="marquee_slide"><img src="./images/JCNP_Client_Free State Department of Health.png" alt=""  height="100" width="250"></div>
+                <div class="marquee_slide"><img src="./images/JCNP_Client_National Department of Health.png" alt="" height="100" width="250"></div>
+                <div class="marquee_slide"><img src="./images/JCNP_Client_Public_Works.png" alt="" height="100" width="250"></div>
+                <div class="marquee_slide"><img src="./images/JCNP_Client_Rand Water Foundation.png" alt="" height="100" width="250"></div>
+                <div class="marquee_slide"><img src="./images/JCNP_Client_Rejuvenation.png" alt="" height="100" width="250"></div>
+                <div class="marquee_slide"><img src="./images/JCNP_Client_Sasol_logo .png" alt="" height="100" width="250"></div>
+                <div class="marquee_slide"><img src="./images/JCNP_Client_Free State Department of Health.png" alt=""  height="100" width="250"></div>
+                <div class="marquee_slide"><img src="./images/JCNP_Client_National Department of Health.png" alt="" height="100" width="250"></div>
+                <div class="marquee_slide"><img src="./images/JCNP_Client_Public_Works.png" alt="" height="100" width="250"></div>
+                <div class="marquee_slide"><img src="./images/JCNP_Client_Rand Water Foundation.png" alt="" height="100" width="250"></div>
+                <div class="marquee_slide"><img src="./images/JCNP_Client_Rejuvenation.png" alt="" height="100" width="250"></div>
+                <div class="marquee_slide"><img src="./images/JCNP_Client_Sasol_logo .png" alt="" height="100" width="250"></div>
+                <div class="marquee_slide"><img src="./images/JCNP_Client_Free State Department of Health.png" alt=""  height="100" width="250"></div>
+                <div class="marquee_slide"><img src="./images/JCNP_Client_National Department of Health.png" alt="" height="100" width="250"></div>
+                <div class="marquee_slide"><img src="./images/JCNP_Client_Public_Works.png" alt="" height="100" width="250"></div>
+                <div class="marquee_slide"><img src="./images/JCNP_Client_Rand Water Foundation.png" alt="" height="100" width="250"></div>
+                <div class="marquee_slide"><img src="./images/JCNP_Client_Rejuvenation.png" alt="" height="100" width="250"></div>
+                <div class="marquee_slide"><img src="./images/JCNP_Client_Sasol_logo .png" alt="" height="100" width="250"></div>
+            </div>
+        </div>
+    </section>
     
 </body>
 </html>
