--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <p>We are a multidisciplinary Level 2 BBEEE compliant firm which currently employees Quantity Surveyors, Building Consultants, Architectures, Project Managers, Geoscience consultants, Technical advisors, Civil, Structural and Mechanical Engineers. </p>
                     <div class="home_hero_cta">
                     
-                        <button class="secondary_button"><a href="./about.html">Contact Us</a></button>
+                        <button class="secondary_button"><a href="./about.html">About Us</a></button>
                         <button class="primary_button"><a href="./about.html">Our Services</a></button>
                     </div>
                 
