about page updates

--- a/about.html
+++ b/about.html
@@ -51,6 +51,9 @@
         
     </section>
     <section class="about_section_3">
+        <div class="conatiner">
+            
+        </div>
 
     </section>
 </body>
