SErvices Pages setup

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <div class="home_hero_cta">
                     
                         <button class="secondary_button"><a href="./about.html">About Us</a></button>
-                        <button class="primary_button"><a href="./about.html">Our Services</a></button>
+                        <button class="primary_button"><a href="./quantity-surveying.html">Our Services</a></button>
                     </div>
                 
             </div>
