--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/style.css">
     <title>JCNP - About Us</title>
 </head>
@@ -13,7 +14,7 @@
     </header>
     <section class="page_banner about_banner">
         <div class="page_banner_overlay"></div>
-        <h1 class="page_banner_heading">About Us</h1>
+        <h3 class="about_banner_heading">About Us</h3>
     </section>
 
     <section class="about_section_1">
