Completion of services pages and blog page

--- a/index.html
+++ b/index.html
@@ -69,25 +69,25 @@
                         <img src="./images/JCNP_Quantity_Surveying.jpg" alt="" class="home_service_card_image">
                         <h4 class="home_service_card_heading">Quantity Surveying, Cost Construction And Management</h4>
                         <p class="home_service_card_text">Pre and Post Contract Quantity Surveying Services Tendering and Contract Award Due Diligence reportst</p>
-                        <button class="primary_button_outline"><a href="">learn more</a></button>
+                        <button class="primary_button_outline"><a href="./quantity-surveying.html">learn more</a></button>
                     </li>
                     <li class="home_service_card service_card_2">
                         <img src="./images/Rectangle 1_JCNP (1).jpg" alt="" class="home_service_card_image">
-                        <h4 class="home_service_card_heading">Project, Construction And Development Managemen</h4>
+                        <h4 class="home_service_card_heading">Project, Construction And Development Management</h4>
                         <p class="home_service_card_text">Pre and Post Contract Quantity Surveying Services Tendering and Contract Award Due Diligence reports</p>
-                        <button class="primary_button_outline"><a href="">learn more</a></button>
+                        <button class="primary_button_outline"><a href="./project-management.html">learn more</a></button>
                     </li>
                     <li class="home_service_card service_card_3">
                         <img src="./images/JCNP_Architectural.jpg" alt="" class="home_service_card_image">
                         <h4 class="home_service_card_heading">Architectural Services</h4>
                         <p class="home_service_card_text">We offer clients bespoke designs that offer sustainable solutions for residential, commercial, industrial.</p>
-                        <button class="primary_button_outline"><a href="">learn more</a></button>
+                        <button class="primary_button_outline"><a href="./architecture.html">learn more</a></button>
                     </li>
                     <li class="home_service_card service_card_4">
                         <img src="./images/JCNP_Engineering.jpg" alt="" class="home_service_card_image">
                         <h4 class="home_service_card_heading">Engineering Services</h4>
                         <p class="home_service_card_text">We provide a wide range of engineering services including</p>
-                        <button class="primary_button_outline"><a href="">learn more</a></button>
+                        <button class="primary_button_outline"><a href="./engineering.html">learn more</a></button>
                     </li>
                 </ul>
             </div>
