--- a/quantity-surveying.html
+++ b/quantity-surveying.html
@@ -10,9 +10,9 @@
 </head>
 <body>
 
-    <section class="page_banner qs_banner">
+    <section class="page_banner service_banner">
         <div class="page_banner_overlay"></div>
-        <h1 class="qs_banner_heading"><span>QUANTITY SURVEYING. </span><br>
+        <h1 class="service_banner_heading"><span>QUANTITY SURVEYING. </span><br>
             COST CONSTRUCTION AND MANAGEMENT</h1>
     </section>
     <section class="service">
@@ -21,43 +21,58 @@
                 <ul class="service_list">
                     <li class="service_heading">
                         <p class="service_heading_number">1.</p>
-                        <p class="service_heading_text">Service heading goes here</p>
+                        <p class="service_heading_text">Pre and Post-Contract Quantity Surveying Servicese</p>
                     </li>
                     <li class="service_item">
                         <i class="fa-solid fa-circle fa-1x"></i>
-                        <p>Service item goes here</p>
+                        <p>Cost advice enables design decisions and alterations to be made with complete knowledge of their financial implications to the client. It entails providing practical advice on the likely cost of a project and monitoring and evaluating designs as they evolve, to ensure compatibility with our client’s budget. It is therefore important to appoint us timeously, not later than the design team.</p>
+                    </li>
+                    <li class="service_item">
+                        <i class="fa-solid fa-circle fa-1x"></i>
+                        <p>Feasibility & Concept Studies Order of Magnitude and Cost/m2 analysis driven by Current and Historical Data</p>
+                    </li>
+                    <li class="service_item">
+                        <i class="fa-solid fa-circle fa-1x"></i>
+                        <p>Bill of Quantities (BOQ) -Measuring and Billing</p>
                     </li>
                 </ul>
                 <ul class="service_list">
                     <li class="service_heading">
-                        <p class="service_heading_number">1.</p>
-                        <p class="service_heading_text">Service heading goes here</p>
+                        <p class="service_heading_number">2.</p>
+                        <p class="service_heading_text">Tendering and Contract Award Due Diligence reports, Prequalifications, Recommendations, Negotiations, Contract Drafting, Contract Award.</p>
                     </li>
                     <li class="service_item">
                         <i class="fa-solid fa-circle fa-1x"></i>
-                        <p>Service item goes here</p>
+                        <p>We analyse any tender documentation from a financial perspective and will evaluate the tenders received – technically and precisely. We then prepare a tender evaluation report and make recommendations and assist our client in the adjudication of tenders.</p>
+                    </li>
+                    <li class="service_item">
+                        <i class="fa-solid fa-circle fa-1x"></i>
+                        <p>Furthermore, we finalize all necessary contract documentation after tenders have been awarded and prepare the relevant documents for signing in close liaison with the client and all role players involved. These documents will then be submitted to our clients for final signage</p>
                     </li>
                 </ul>
                 <ul class="service_list">
                     <li class="service_heading">
-                        <p class="service_heading_number">1.</p>
-                        <p class="service_heading_text">Service heading goes here</p>
+                        <p class="service_heading_number">3.</p>
+                        <p class="service_heading_text">Commercial & Contract Mgmt. From initial Construction stages to Post Handover. Interim Payments, Claim support, Variations, Final Accounts.</p>
                     </li>
                     <li class="service_item">
                         <i class="fa-solid fa-circle fa-1x"></i>
-                        <p>Service item goes here</p>
-                    </li>
-                </ul>
-                <ul class="service_list">
-                    <li class="service_heading">
-                        <p class="service_heading_number">1.</p>
-                        <p class="service_heading_text">Service heading goes here</p>
+                        <p>We prepare monthly evaluations pertaining to the work completed and materials on site for interim payment certificates, in close liaison with the client’s principal agent. We will assist this agent in any negotiations with the contractor for new rates for the cost calculations of any additions or omissions.</p>
                     </li>
                     <li class="service_item">
                         <i class="fa-solid fa-circle fa-1x"></i>
-                        <p>Service item goes here</p>
+                        <p>Furthermore, we timeously evaluate all variation orders, dayworks and scope changes issued by the client’s principal agent. We also valuate and verify fluctuations in cost under the applicable contract price adjustment provisions (CPAP) and we advise the client’s principal agent on the legitimacy and cost implications of all claims received by the contractor.</p>
+                    </li>
+                    <li class="service_item">
+                        <i class="fa-solid fa-circle fa-1x"></i>
+                        <p>In addition, we prepare monthly budget control reports, maintain running financial statements, cash flow charts, final cost forecast, etc. Finally, we measure all work prior to being covered and measure all revisions of drawings as soon as practically possible after the date of issue.</p>
+                    </li>
+                    <li class="service_item">
+                        <i class="fa-solid fa-circle fa-1x"></i>
+                        <p>During the final stage account, we assist the client’s principal agent in resolving any claims by the contractor. We re-measure all the final drawings, variations and work as executed within the shortest reasonable time after the certificate of completion has been issued to the contractor. We also prepare and price – in close liaison with the client’s principal agent – the final account in terms of the contract and negotiate with the contractor.</p>
                     </li>
                 </ul>
+               
             </div>
             
         </div>
