Blog post page completed

--- a/blog.html
+++ b/blog.html
@@ -24,15 +24,15 @@
                     <h4 class="blog_title">The title of the blog goes here</h4>
                     <p class="blog_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero, aut? </p>
                     <p class="blog_details">Posted:2023-01-23</p>
-                    <button class="secondary_button"><a href="./blog-page.html">read more</a></button>
+                    <button class="secondary_button"><a href="./post.html">read more</a></button>
     
                 </div>
                 <div class="blog_section_1_card">
-                    <img src="./images/JCNP_Blog.jpg" alt="" class="blog_image">
+                    <img src="./images/JCNP_Blog_2.jpg" alt="" class="blog_image">
                     <h4 class="blog_title">The title of the blog goes here</h4>
                     <p class="blog_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero, aut?  </p>
                     <p class="blog_details">Posted:2023-01-23</p>
-                    <button class="secondary_button"><a href="./blog-page.html">read more</a></button>
+                    <button class="secondary_button"><a href="#">read more</a></button>
     
                 </div>
         </div>
