--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
         </div>
         <section class="contact_section_2 container">
             <h3>Send us your <span>request</span> </h3>
-            <form action="https://formsubmit.co/el/duvixu" method="POST" >
+            <form action="https://formspree.io/f/xnqygjye" method="POST" >
                <div class="input_grid">
                 <div class="input_group">
                     <label for="">Name</label>
