--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
         </div>
         <section class="contact_section_2 container">
             <h3>Send us your <span>request</span> </h3>
-            <form action="https://formspree.io/f/xnqygjye" method="POST" >
+            <form action="https://formspree.io/f/mnqygjky" method="POST" >
                <div class="input_grid">
                 <div class="input_group">
                     <label for="">Name</label>
@@ -60,7 +60,7 @@
                 <textarea name="Message"rows="20"></textarea>
                 
               </div>
-              <button type="submit" class="primary_button"><a href="">submit form</a></button>
+              <button class="primary_button" type="submit"><a>submit form</a> </button>
             </form>
         </section>
     </section>
