Navigation and bug fixes

--- a/index.html
+++ b/index.html
@@ -69,30 +69,6 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     <section class="home_hero">
         <div class="home_hero_overlay"></div>
             <div class="home_hero_content container">
@@ -116,7 +92,7 @@
                 <li class="home_about_card card_1">
                     <h3 class="card_heading">31+ years of undefeated success.</h3>
                     <p class="card_text">JC Nel Putter has been in existence since 1992 as Du Toit Putter The company was established in Welkom and moved to Sasolburg in 1998 as JC Nel Putter Quantity Surveyors.</p>
-                    <button class="primary_button_outline"><a href="">Learn More</a></button>  
+                    <button class="primary_button_outline"><a href="./about.html">Learn More</a></button>  
                 </li>
                 <li class="home_about_card card_2">
                     <h3 class="card_heading">85+</h3>
@@ -131,8 +107,8 @@
                     <p class="card_text">Commitment to our clients</p>
                 </li>
                 <li class="home_about_card card_5">
-                    <h3 class="card_heading">100+</h3>
-                    <p class="card_text">This is a paragrapgh</p>
+                    <h3 class="card_heading">100%</h3>
+                    <p class="card_text">Commited to inclusivity in our sector.</p>
                 </li>
             </ul>
     </section>
@@ -245,8 +221,8 @@
                 <ul>
                     <li class="group_item"><a href="./index.html">Home</a></li>
                     <li class="group_item"><a href="./about.html">About Us</a></li>
-                    <li class="group_item"><a href="./index.html">News</a></li>
-                    <li class="group_item"><a href="./index.html">Contact</a></li>
+                    <li class="group_item"><a href="./blog.html">News</a></li>
+                    <li class="group_item"><a href="./contact.html">Contact</a></li>
                 </ul>
             </div>
             <div class="footer_group_container footer_contacts">
@@ -288,13 +264,9 @@
             
         </div>
     </footer>
+  
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js" integrity="sha512-cOH8ndwGgPo+K7pTvMrqYbmI8u8k6Sho3js0gOqVWTmQMlLIi6TbqGWRTpf1ga8ci9H3iPsvDLr4X7xwhC/+DQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <!-- <script src="./js/main.js"></script> -->
+    <script src="./js/main.js"></script>
 </body>
 </html>
 
-<!--  <li class="dropdown_item"><a href="./quantity-surveying.html">Quantity Surveying, Cost Construction And Management</a></li>
-                                    <li class="dropdown_item"><a href="./architecture.html">Architectural Services</a></li>
-                                    <li class="dropdown_item"><a href="./project-management.html">Project, Construction And Development Management</a></li>
-                                    <li class="dropdown_item"><a href="./engineering.html">Engineering Services</a></li>
-                               </ul>  -->
