--- a/index.html
+++ b/index.html
@@ -10,8 +10,38 @@
     <title>JCNP - Home</title>
 </head>
 <body>
-    
-    <header>
+    <header class="header">
+        <div class="container">
+            <div class="header_bottom">
+                <div class="logo"><a href="./index.html"><img src="./images/JCNP_Logo_Invert.svg" alt=""></a></div>
+                <div class="open_nav_menu">
+                    <span></span>
+                </div>
+                <div class="menu_overlay"></div>
+                <!-- Menu Starts -->
+                <nav class="nav_menu">
+                    <div class="close_nav_menu">
+                        <img src="./images/close.svg" alt="close">
+                    </div>
+                    <ul class="menu">
+                        <li class="menu_item"><a href="./index.html">Home</a></li>
+                        <li class="menu_item"><a href="./about.html">About Us</a></li>
+                        <li class="menu_item menu_item_has_children"><a href="#" data-toggle="sub_menu">Services <i class="fa-solid fa-chevron-down"></i></a>
+                            <ul class="sub_menu">
+                                <li class="menu_item"><a href="./quantity-surveying.html">Quantity Surveying</a></li>
+                                <li class="menu_item"><a href="./project-management.html">Construction Management</a></li>
+                                <li class="menu_item"><a href="./engineering.html">Engineering Services</a></li>
+                                <li class="menu_item"><a href="./architecture.html">Architectural Services</a></li>
+                            </ul>
+                        </li>
+                        <li class="menu_item"><a href="./blog.html">News</a></li>
+                        <li class="menu_item"><a href="./contact.html">Contact Us</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </header>
+    <!-- <header>
         <div class="container">
             <div class="navigation_top">
                 <div class="navigation_top_left">
@@ -65,7 +95,7 @@
                 </div>
             </div>
         </div>
-    </header>
+    </header> -->
 
 
 
