Nav implemented on all pages

--- a/about.html
+++ b/about.html
@@ -11,6 +11,24 @@
 <body>
     <header class="header">
         <div class="container">
+            <div class="header_top">
+                <div class="header_top_left">
+                    <div class="header_top_left_location">
+                        <i class="fa-solid fa-location-dot"></i>
+                        <a target="_blank" href="https://www.google.com/maps/place/17+N+J+Van+Der+Merwe+Cres,+Vaalpark,+Sasolburg,+1947/@-26.8107969,27.8260713,17z/data=!3m1!4b1!4m6!3m5!1s0x1e945dd4635a41c1:0x3edaac9c899fa320!8m2!3d-26.8107969!4d27.8260713!16s%2Fg%2F11s8g4yydb">Address: 17 NJ Van Der Merwe Crescent, Sasolburg, 1947</a>
+                    </div>
+                </div>
+                <div class="header_top_right">
+                    <div class="header_top_right_contact">
+                        <i class="fa-solid fa-phone"></i>
+                        <p>016 973 1804</p>
+                    </div>
+                    <div class="header_top_right_hours">
+                        <i class="fa-solid fa-clock"></i>
+                        <p>Mon - Fri : 7am - 4pm || Friday : 7am -  1pm </p>
+                    </div>
+                </div>
+            </div>
             <div class="header_bottom">
                 <div class="logo"><a href="./index.html"><img src="./images/JCNP_Logo_Invert.svg" alt=""></a></div>
                 <div class="open_nav_menu">
@@ -27,8 +45,9 @@
                         <li class="menu_item"><a href="./about.html">About Us</a></li>
                         <li class="menu_item menu_item_has_children"><a href="#" data-toggle="sub_menu">Services <i class="fa-solid fa-chevron-down"></i></a>
                             <ul class="sub_menu">
-                                <li class="menu_item"><a href="./quantity-surveying.html">Quantity Surveying</a></li>
-                                <li class="menu_item"><a href="./project-management.html">Construction Management</a></li>
+                                <li class="menu_item"><a href="./quantity-surveying.html">Quantity Surveying, Cost Construction And Management</a></li>
+                                <li class="menu_item"><a href="./project-management.html">Construction And Development Management</a></li>
+                                                
                                 <li class="menu_item"><a href="./engineering.html">Engineering Services</a></li>
                                 <li class="menu_item"><a href="./architecture.html">Architectural Services</a></li>
                             </ul>
