--- a/quantity-surveying.html
+++ b/quantity-surveying.html
@@ -130,7 +130,10 @@
                 </ul>
                
             </div>
-            
+            <div class="service_buttons">
+                <button class="primary_text_button"><a href="./project-management.html"><i class="fa-solid fa-chevron-left"></i>previous service </a></button>
+                <button class="primary_text_button"><a href="./project-management.html">next service<i class="fa-solid fa-chevron-right"></i> </a></button>
+            </div>           
         </div>
     </section>
     <footer>
