Updates and fixes

--- a/quantity-surveying.html
+++ b/quantity-surveying.html
@@ -131,8 +131,8 @@
                
             </div>
             <div class="service_buttons">
-                <button class="primary_text_button"><a href="./project-management.html"><i class="fa-solid fa-chevron-left"></i>previous service </a></button>
-                <button class="primary_text_button"><a href="./project-management.html">next service<i class="fa-solid fa-chevron-right"></i> </a></button>
+                <button class="text_button_inactive"><a href="./project-management.html"><i class="fa-solid fa-chevron-left"></i>previous service </a></button>
+                <button class="primary_text_button"><a href="./project-management.html">next service </a><i class="fa-solid fa-chevron-right"></i></button>
             </div>           
         </div>
     </section>
