Link to call feature

--- a/about.html
+++ b/about.html
@@ -195,7 +195,7 @@
                 <ul>
                     <li class="group_item contact_item">
                         <i class="fa-solid fa-phone"></i>
-                        <p>016 973 1804</p>
+                        <a href="tel:+2716 973 1804">016 973 1804</a>
                     </li>
                     <li class="group_item contact_item">
                         <i class="fa-brands fa-whatsapp"></i>
